# msd2

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: test.yaml
config/: 0_50.yaml  config.yaml  major.yaml  test.yaml
msdconfig/: test.yaml
scripts/: ortho_only.sh  summary.sh
src/msd2/: __init__.py  cli.py  config.py  paths.py
src/msd2/analysis/: data.py  design_metrics.py  metrics.py  plots.py  qois.py
src/msd2/cli/: __init__.py  main.py  setup.py  studies.py  studies_quick.py
src/msd2/edges/: g2.py  graph.py
src/msd2/eplus/: interfaces.py  main.py  metrics.py  utils.py
src/msd2/examples/: examples.py  paths.py
src/msd2/geom/: connectivity.py  create.py  interfaces.py  io.py  run.py  utils.py
src/msd2/graph_analysis/: interfaces.py  main.py  viz.py
src/msd2/readin/: access.py  filters.py  interfaces.py  scripts.py  utils.py
static/_03_models/snakemake/test/4969/: run.idf
static/_03_models/snakemake/test/5013/: run.idf
static/_04_temp/msd_stats/: valid_ids.json
static/_04_temp/temp/: test_graph.pickle
static/_04_temp/workflow/inputs/: 11222.json  155467.json  155721.json  18515.json  21035.json  38990.json  39671.json  52642.json  9965.json
static/_05_figures/snakemake/0_50/data/day/: out.csv
static/_05_figures/snakemake/0_50/data/night/: out.csv
static/_05_figures/snakemake/0_50/metrics/: out.csv
tests/eplus/: test_eplus.py
tests/geom/: test_convert.py  test_geom.py
tests/readin/: test_read_ids.py  test_readin.py
trials/: geom_process.py  readin.py  rotate.py  study_idf.py
workflow/: Snakefile
workflow/rules/: analysis.smk  common.smk  eplus.smk  graph.smk  msd.smk  polyfix.smk  polymap.smk
