[project]
name = "msd2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" },
]
requires-python = ">=3.13"
dependencies = [
  "cyclopts>=4.4.4",
  "dataframely>=2.1.0",
  "geomeppy",
  "just>=0.8.165",
  "kagglehub>=0.3.13",
  "loguru>=0.7.3",
  "polymap",
  "ptpython>=3.0.32",
  "replan2eplus",
  "tabulate>=0.9.0",
  "utils4plans",
]
[project.scripts]
msd = "msd2.cli.main:main"
msd-studies = "msd2.cli.studies:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
utils4plans = { path = "../../utils4plans" }
geomeppy = { path = "../../geomeppy" }
polymap = { path = "../../polymap" }
replan2eplus = { path = "../../replan2eplus" }
