[project]
name = "msd2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" },
]
requires-python = ">=3.13"
dependencies = [
  "altair>=6.0.0",
  "astropy>=7.2.0",
  "cyclopts>=4.4.4",
  "dataframely>=2.1.0",
  "iplotx>=1.6.0",
  "just>=0.8.165",
  "kagglehub>=0.3.13",
  "loguru>=0.7.3",
  "omegaconf>=2.3.0",
  "patito>=0.8.5",
  "plan2eplus>=0.1.3",
  "polyfix>=0.1.0",
  "ptpython>=3.0.32",
  "scikit-learn>=1.8.0",
  "tabulate>=0.9.0",
  "types-networkx>=3.6.0.20251127",
  "utils4plans>=0.1.12",
]
[project.scripts]
msd = "msd2.cli.main:main"
msd-studies = "msd2.cli.studies:main"
msd-studies-quick = "msd2.cli.studies_quick:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
